--- a/mao-na-massa-curso-1/exercicios-aula-3.html
+++ b/mao-na-massa-curso-1/exercicios-aula-3.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <title>Portfólio de João Pedro</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="logo.jpg" alt="Logotipo Desenvolvimento Web">
+    </header>
     <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+        <h1>Meu portfólio</h1>
+        <h2><strong>Desenvolvimento Web</strong></h2>
         <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
         <a href="https://github.com/joaopedrobcaetano">GitHub</a>
         <img src="foto.jpeg" alt="Foto de perfil">
     </main>
-    <footer></footer>
+    <footer>
+        <p>Copyright © 2024</p>
+    </footer>
 </body>
 </html>
