--- a/mao-na-massa-curso-1/index-aula-3.html
+++ b/mao-na-massa-curso-1/index-aula-3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style-3.css">
     <title>Portfólio de João Pedro</title>
 </head>
 <body>
@@ -11,10 +12,10 @@
     </header>
     <main>
         <h1>Meu portfólio</h1>
-        <h2><strong>Desenvolvimento Web</strong></h2>
+        <h2>Desenvolvimento <strong>Web</strong></h2>
         <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
-        <a href="https://github.com/joaopedrobcaetano">GitHub</a>
+        <a href="https://www.linkedin.com/in/joaopedrobcaetano"><button>LinkedIn</button></a>
+        <a href="https://github.com/joaopedrobcaetano"><button>GitHub</button></a>
         <img src="foto.jpeg" alt="Foto de perfil">
     </main>
     <footer>
