--- a/mao-na-massa-curso-1/index-aula-3.html
+++ b/mao-na-massa-curso-1/index-aula-3.html
@@ -11,9 +11,9 @@
         <img src="logo.jpg" alt="Logotipo Desenvolvimento Web">
     </header>
     <main>
-        <h1>Meu portfólio</h1>
+        <h1 class="titulo-blog">Meu portfólio</h1>
         <h2>Desenvolvimento <strong>Web</strong></h2>
-        <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
         <a href="https://www.linkedin.com/in/joaopedrobcaetano"><button>LinkedIn</button></a>
         <a href="https://github.com/joaopedrobcaetano"><button>GitHub</button></a>
         <img src="foto.jpeg" alt="Foto de perfil">
