--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+        <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
         <a href="https://github.com/joaopedrobcaetano">GitHub</a>
