--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header></header>
-    <main>
+    <main class="apresentacao">
         <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
