--- a/mao-na-massa-curso-1/index-aula-3.html
+++ b/mao-na-massa-curso-1/index-aula-3.html
@@ -11,23 +11,14 @@
         <img src="logo.jpg" alt="Logotipo Desenvolvimento Web">
     </header>
     <main class="container">
-        <h1 class="titulo-blog">Meu portfólio</h1>
+        <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">Meu portfólio</h1>
         <h2>Desenvolvimento <strong>Web</strong></h2>
-        <p class="texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
+        <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
         <a href="https://www.linkedin.com/in/joaopedrobcaetano"><button>LinkedIn</button></a>
         <a href="https://github.com/joaopedrobcaetano"><button>GitHub</button></a>
-        <img class="imagem" src="foto.jpeg" alt="Foto de perfil">
-        <div class="container2">
-            <div>Item 1</div>
-            <div>Item 2</div>
-            <div>Item 3</div>
-        </div>
-        <div class="responsivo-container">
-            <div>Conteúdo 1</div>
-            <div>Conteúdo 2</div>
-            <div>Conteúdo 3</div>
-        </div>
-            
+        </section>
+        <img class="imagem" src="foto.jpeg" alt="Foto de perfil">                
     </main>
     <footer>
         <p>Copyright © 2024</p>
