--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,10 +9,12 @@
 <body>
     <header></header>
     <main class="apresentacao">
-        <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
-        <a href="https://github.com/joaopedrobcaetano">GitHub</a>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
+            <a href="https://github.com/joaopedrobcaetano">GitHub</a>
+        </section>
         <img src="foto.jpeg" alt="Foto de perfil">
     </main>
     <footer></footer>
