--- a/mao-na-massa-curso-1/index-aula-3.html
+++ b/mao-na-massa-curso-1/index-aula-3.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <header>
-        <img src="logo.jpg" alt="Logotipo Desenvolvimento Web">
+        <img src="https://cdn-icons-png.flaticon.com/256/6471/6471995.png" width="100px" height="100px" alt="Logotipo Desenvolvimento Web">
     </header>
     <main class="container">
         <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Meu portfólio</h1>
         <h2>Desenvolvimento <strong>Web</strong></h2>
         <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
-        <a href="https://www.linkedin.com/in/joaopedrobcaetano"><button>LinkedIn</button></a>
-        <a href="https://github.com/joaopedrobcaetano"><button>GitHub</button></a>
+        <div class="apresentacao__links">
+            <a class="apresentacao__links__botoes" href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
+            <a class="apresentacao__links__botoes" href="https://github.com/joaopedrobcaetano">GitHub</a>
+        </div>
         </section>
         <img class="imagem" src="foto.jpeg" alt="Foto de perfil">                
     </main>
