--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,8 +12,10 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-            <a href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
-            <a href="https://github.com/joaopedrobcaetano">GitHub</a>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
+                <a class="apresentacao__links__link" href="https://github.com/joaopedrobcaetano">GitHub</a>
+            </div>
         </section>
         <img src="foto.jpeg" alt="Foto de perfil">
     </main>
