fazendo curso 03 aula 01

--- a/mao-na-massa-curso-1/index-aula-3.html
+++ b/mao-na-massa-curso-1/index-aula-3.html
@@ -16,8 +16,9 @@
         <h2>Desenvolvimento <strong>Web</strong></h2>
         <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
         <div class="apresentacao__links">
-            <a class="apresentacao__links__botoes" href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
-            <a class="apresentacao__links__botoes" href="https://github.com/joaopedrobcaetano">GitHub</a>
+            <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
+            <a class="apresentacao__links__link" href="https://github.com/joaopedrobcaetano">GitHub</a>
         </div>
         </section>
         <img class="imagem" src="foto.jpeg" alt="Foto de perfil">                
