mao na massa curso 03 aula 02

--- a/mao-na-massa/index-testes.html
+++ b/mao-na-massa/index-testes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-aula-3.css">
+    <link rel="stylesheet" href="style-testes.css">
     <title>Portfólio de João Pedro</title>
 </head>
 <body>
@@ -17,8 +17,8 @@
         <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em <span class="texto-destaque">HTML, CSS e JavaScript</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. <span class="urgente">Vamos conversar?</span></p>
         <div class="apresentacao__links">
             <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/joaopedrobcaetano">LinkedIn</a>
-            <a class="apresentacao__links__link" href="https://github.com/joaopedrobcaetano">GitHub</a>
+            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/joaopedrobcaetano"><img src="assets/linkedin.png" alt="Logo LinkedIn">LinkedIn</a>
+            <a class="apresentacao__links__link" href="https://github.com/joaopedrobcaetano"><img src="assets/github.png" alt="Logo GitHub">GitHub</a>
         </div>
         </section>
         <img class="imagem" src="foto.jpeg" alt="Foto de perfil">                
