fazendo curso 03 aula 03

--- a/mao-na-massa/index-testes.html
+++ b/mao-na-massa/index-testes.html
@@ -7,10 +7,14 @@
     <title>Portfólio de João Pedro</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img src="https://cdn-icons-png.flaticon.com/256/6471/6471995.png" width="100px" height="100px" alt="Logotipo Desenvolvimento Web">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+        </nav>
     </header>
-    <main class="container">
+    <main class="apresentacao">
         <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Meu portfólio</h1>
         <h2>Desenvolvimento <strong>Web</strong></h2>
@@ -23,8 +27,8 @@
         </section>
         <img class="imagem" src="foto.jpeg" alt="Foto de perfil">                
     </main>
-    <footer>
-        <p>Copyright © 2024</p>
+    <footer class="rodape">
+        <p class="rodape__texto">Copyright © 2024</p>
     </footer>
 </body>
 </html>
