--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,12 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
@@ -20,6 +25,8 @@
         </section>
         <img src="assets/foto.jpeg" alt="Foto de perfil">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por João Pedro</p>
+    </footer>
 </body>
 </html>
