fazendo curso 03 aula 04

--- a/mao-na-massa/index-testes.html
+++ b/mao-na-massa/index-testes.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-testes.css">
+    <link rel="stylesheet" href="styles/style-testes.css">
     <title>Portfólio de João Pedro</title>
 </head>
 <body>
     <header class="cabecalho">
         <img src="https://cdn-icons-png.flaticon.com/256/6471/6471995.png" width="100px" height="100px" alt="Logotipo Desenvolvimento Web">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="">Home</a>
-            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index-testes.html">Home</a>
+            <a class="cabecalho__menu__link" href="about-testes.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
