--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Portfólio</title>
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="">Home</a>
-            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -26,7 +26,7 @@
         <img src="assets/foto.jpeg" alt="Foto de perfil">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por João Pedro</p>
+        <p>Desenvolvido por João Pedro | Curso de HTML e CSS da Alura</p>
     </footer>
 </body>
 </html>
