--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -13,8 +13,13 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
-    <main>
-        
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate provident unde iste dolor eveniet architecto officia maiores culpa numquam veniam recusandae cum, deleniti vitae necessitatibus, laborum odit eius quas vel.</p>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus sapiente sequi vero fuga explicabo. Quisquam aspernatur illo in, itaque at labore laudantium hic cum, ratione ullam accusamus neque, quaerat voluptatem!</p>
+        </section>
+        <img src="assets/foto.jpeg" alt="Foto de perfil">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por João Pedro | Curso de HTML e CSS da Alura</p>
