--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,11 +19,11 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou João Pedro, desenvolvedor Front-end com especialidade em HTML, CSS e JavaScript. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/joaopedrobcaetano"><img src="assets/linkedin.png" alt="Logo LinkedIn">LinkedIn</a>
-                <a class="apresentacao__links__link" href="https://github.com/joaopedrobcaetano"><img src="assets/github.png" alt="Logo GitHub">GitHub</a>
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/joaopedrobcaetano"><img src="assets/linkedin.png" alt="Logo LinkedIn">LinkedIn</a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/joaopedrobcaetano"><img src="assets/github.png" alt="Logo GitHub">GitHub</a>
             </div>
         </section>
-        <img src="assets/foto.jpeg" alt="Foto de perfil">
+        <img class="apresentacao__imagem" src="assets/foto.jpeg" alt="Foto de perfil">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por João Pedro | Curso de HTML e CSS da Alura</p>
