--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -16,8 +16,9 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate provident unde iste dolor eveniet architecto officia maiores culpa numquam veniam recusandae cum, deleniti vitae necessitatibus, laborum odit eius quas vel.</p>
-            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus sapiente sequi vero fuga explicabo. Quisquam aspernatur illo in, itaque at labore laudantium hic cum, ratione ullam accusamus neque, quaerat voluptatem!</p>
+            <p class="apresentacao__conteudo__texto">Estudante de Análise e Desenvolvimento de Sistemas com foco em desenvolvimento front-end.</p>
+            <p class="apresentacao__conteudo__texto">Tenho experiência no setor administrativo, mas agora estou em transição de carreira buscando minha primeira oportunidade profissional na área da tecnologia para aplicar e expandir minhas habilidades.</p>
+            <p class="apresentacao__conteudo__texto">Prezo sempre por trabalhar em equipe, cooperando com todos e ajudando da melhor maneira possível, com grande satisfação em ensinar e aprender.</p>
         </section>
         <img src="assets/foto.jpeg" alt="Foto de perfil">
     </main>
